--- a/python_4_ds_predict_student_version-2128.ipynb
+++ b/python_4_ds_predict_student_version-2128.ipynb
@@ -286,7 +286,7 @@
    "source": [
     "twitter_url = 'https://raw.githubusercontent.com/Explore-AI/Public-Data/master/Data/twitter_nov_2019.csv'\n",
     "twitter_df = pd.read_csv(twitter_url)\n",
-    "twitter_df.head()"
+    "twitter_df.head() #importing content from the above link"
    ]
   },
   {
